feat: run desktop app on shared navigation